<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance Reborn</string>
    <string name="tagline">The ultimate finance app.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="fullName">Full name</string>
    <string name="username">Username</string>
    <string name="title_activity_login_view">LoginViewActivity</string>
    <string name="title_activity_register_view">RegisterViewActivity</string>
    <string name="title_activity_dashboard_view">DashboardViewActivity</string>
    <string name="title_activity_create_new_account_view">CreateNewAccountView</string>

</resources>
